--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "daily collection, a web crawler for Fibo",
   "main": "main.js",
   "scripts": {
-    "start": "node -r esm main.js",
+    "start": "node main.js",
     "test": "jest"
   },
   "devDependencies": {
     "esm": "^3.2.25",
-    "jest": "^27.5.1"
+    "jest": "^22.1.4"
   },
   "repository": {
     "type": "git",
@@ -25,7 +25,9 @@
   },
   "homepage": "https://github.com/raad-dego/miguel-crawler#readme",
   "dependencies": {
+    "axios": "^1.4.0",
     "jest-puppeteer": "^9.0.0",
-    "puppeteer": "^20.5.0"
+    "puppeteer": "^18.1.0",
+    "puppeteer-core": "^20.5.0"
   }
 }
