--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/raad-dego/miguel-crawler#readme",
   "dependencies": {
     "axios": "^1.4.0",
+    "dotenv": "^16.1.4",
     "jest-puppeteer": "^9.0.0",
     "puppeteer": "^18.1.0",
     "puppeteer-core": "^20.5.0"
